Fix footer nav alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -155,7 +155,7 @@
 
 .footer-nav {
     font-weight: bold;
-    margin-top: -44pt;
+    margin-top: -44.5pt;
     margin-bottom: $spacing-unit / 2;
     letter-spacing: $title-letter-spacing;
 
